2001-05-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/date.c (printDate): Workaround for
	missing nl_langinfo.

	* src/engine/Query.c: moved sys/types.h before
	regex.h.

	* acinclude.m4 (HAVE_LANGINFO_D_FMT): add check
	for working nl_langinfo(D_FMT).

	* configure.in: use check for nl_langinfo(D_FMT).

2001-05-29  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-options.{ch} (gnc_options_dialog_new):
	provide the ability to (optionally) set a title for
	the options dialog box.  API changed.

	* src/gnome/dialog-column-view.c, dialog-style-sheet.c,
	window-acct-tree.c :modify to use changed API.

	* src/gnome/window-report.c: use new API to title report
	options dialogs.

2001-05-28  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/pt_PT/*: add Duarte Loreto's updated transations

	* src/engine/gnc-pricedb.c (compare_prices_by_date): stabilize
	sort using guids

	* src/engine/gnc-pricedb-xml-v1.c (price_parse_xml_sub_node): fix
	mem leak

2001-05-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/tip-list.scm: edited some tips after consultation with
	Robert Graham Merkel.
	
	* po/sv.po: by Pablo Saratxaga <pablo@mandrakesoft.com>: changed
	DOS end of lines to Unix end of lines.

2001-05-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-fincalc.c: Kevin Foss's bug fix

	* src/engine/sql/kvp-sql.h: add /* */ around #endif comment

	* src/gnc-component-manager.c (gnc_cm_event_handler): ignore
	price events

2001-05-26  James LewisMoss  <jimdres@mindspring.com>

	* src/gnome/new-user-funs.c (gnc_new_user_dialog_is_new_user): new
	func to test is new user.
	(gnc_ui_show_new_user_window): add arg for new user or not.
	(gnc_ui_show_new_user_choice_window): call
	gnc_ui_show_new_user_window with one argument saying it is a new
	user call.

	* src/gnome/new-user-callbacks.c (cancel_everything_out): new func
	extracting out shared functionality.
	(on_accountChooseDruidPage_cancel): add check to only pop up