@@ -1,3 +1,7 @@
+2001-05-29  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/date.c: handle all uses of nl_langinfo.
+
 2001-05-30  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/engine/date.c (printDate): Workaround for
